忘记密码第一步的提示用户名不存在功能已经实现

--- a/app/views/user/login.haml
+++ b/app/views/user/login.haml
@@ -22,7 +22,7 @@
       =flash.now[:notice]
   .nav-header
     .right
-      =link_to  "忘记密码",:action => "reset_key"
+      =link_to  "忘记密码",:action => "reset_key1"
   %br
 
 
