--- a/app/views/user/login.haml
+++ b/app/views/user/login.haml
@@ -22,7 +22,7 @@
       =flash.now[:notice]
   .nav-header
     .right
-      =link_to  "忘记密码",:action => "reset_key1"
+      =link_to  "忘记密码",:action => "reset_key1_check_account"
   %br
 
 
