--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -3,7 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .right{
-  float:right
+  float:right;
+}
+.right-padding{
+  float: right;
+  padding-right:140px
 }
 .yuanjiao{
   border-top-left-radius:10px;
