--- a/app/views/user/login_success.haml
+++ b/app/views/user/login_success.haml
@@ -1,8 +1,9 @@
 .nav-header
   .right
     %p1
-      %span 你好,
-      %sapn
-        = @user.name
+      %lable 你好,
+      %lable
+      =@user.name
     =link_to  "退出",:action => "login"
 %h2 活动通
+
