管理用户界面分页功能实现

--- a/app/views/user/manage_index.haml
+++ b/app/views/user/manage_index.haml
@@ -16,11 +16,11 @@
   %tbody
     -@user.each do |t|
       %tr
-        %td(align="center" style="width:35%; height: 21px;" valign="middle")
+        %td(align="center" style="width:37%" valign="middle")
           =t.id-1
-        %td(align="center" style="width:35%; height: 21px;" valign="middle")
+        %td(align="center" style="width:37%" valign="middle")
           =t.name
-        %td(align="center" style="width:45%; height: 21px;" valign="middle")
+        %td(align="center" style="width:45%" valign="middle")
           =link_to '删除' ,:action => "login"
           =link_to '修改密码',:action => "login"
 .right-padding
