--- a/app/views/user/manage_index.haml
+++ b/app/views/user/manage_index.haml
@@ -6,7 +6,9 @@
 %h2 活动通
 %br
 %div(class='yuanjiao'style="margin:auto;width:79%;background:#c0c0c0;padding:1px")
-  %h5 用户管理
+  %h4
+    用户管理
+    %button(class="btn" ) 添加用户
 %table(class="table table-hover" style="margin:auto; width:79%")
   %thead
     %tr
