--- a/app/views/user/admin_modify_account_key.haml
+++ b/app/views/user/admin_modify_account_key.haml
@@ -24,6 +24,7 @@
         = f.text_field :password2 ,:type=>"password",:placeholder=>"请再次输入"
       .label-warning
         =flash.now[:notice1]
+        =flash.now[:notice2]
       %div(style="text-align:center;")
       %br
         = f.submit "确认修改", class: "btn btn-primary"
