--- a/app/views/user/login_success.haml
+++ b/app/views/user/login_success.haml
@@ -4,6 +4,6 @@
       %lable 你好,
       %lable
       =@user.name
-    =link_to  "退出",:action => "login"
+    =link_to  "退出",:action => "logout"
 %h2 活动通
 
