--- a/app/views/user/manage_index.haml
+++ b/app/views/user/manage_index.haml
@@ -2,7 +2,7 @@
   .right
     %p1
       %span 你好,管理员
-    =link_to  "退出",:action => "login"
+    =link_to  "退出",:action => 'logout',:controller => 'sessions'
 %h2 活动通
 %br
 %div(class='yuanjiao'style="margin:auto;width:79%;background:#c0c0c0;padding:1px")
