--- a/app/views/user/register.haml
+++ b/app/views/user/register.haml
@@ -3,7 +3,7 @@
   .nav-header
     %h4 新用户注册
     .right
-      =link_to  "用户登录",:action => "login"
+      =link_to  "用户登录",root_path
   %br
   %br
   %div(class="index-login" style="text-align:center;")
