--- a/app/views/user/reset_key3_to_reset_key.haml
+++ b/app/views/user/reset_key3_to_reset_key.haml
@@ -3,7 +3,7 @@
   .nav-header
     %h4重置密码
     .right
-      =link_to  "用户登录",:action => "login"
+      =link_to  "用户登录",root_path
   %br
   %br
   %div(class="index-login" style="text-align:center;")
