记住登录功能实现

--- a/app/assets/stylesheets/bootstrapswitch.css
+++ b/app/assets/stylesheets/bootstrapswitch.css
@@ -1,4 +1,4 @@
-/* ============================================================
+.nav-header/* ============================================================
  * bootstrapSwitch v1.2 by Larentis Mattia @spiritualGuru
  * http://www.larentis.eu/switch/
  * ============================================================
