--- a/app/views/user/admin_modify_account_key.haml
+++ b/app/views/user/admin_modify_account_key.haml
@@ -29,4 +29,4 @@
         =flash.now[:notice2]
       %div(style="text-align:center;")
       %br
-        = f.submit "确认修改", class: "btn btn-primary"
+        = f.submit "确认修改", class: "btn btn-primary",data:{confirm:"密码修改成功"}
