--- a/app/views/user/manage_index.haml
+++ b/app/views/user/manage_index.haml
@@ -11,7 +11,7 @@
   %h4
     用户管理
     .btn
-      =link_to "添加用户",:action => "add_account"
+      =link_to "添加用户",:action => "judge_add_account"
 %table(class="table table-hover" style="margin:auto; width:79%")
   %thead
     %tr
