改变party——bid数据结构，可以与服务器通信，并实现登录后只显示当前用户信息

--- a/public/www/hamls/pages/activity_list.haml
+++ b/public/www/hamls/pages/activity_list.haml
@@ -5,6 +5,6 @@
       %a.btn.btn-primary(ng-tap="go_to_create_activity_page()" ng-disabled="create_btn_can_tap")创建活动
   #wrapper.wrapper
     %ul.list-style-2
-      %li(style="{{$index|id}};line-height:40px" id="{{$index}}" align="center" ng-tap="scan_sign_up_information({{$index}})" ng-repeat="activity in activities") {{activity.activity_name}}
+      %li(style="{{activity.id|id}};line-height:40px"  align="center" ng-tap="scan_sign_up_information('{{activity.name}}')" ng-repeat="activity in activities|orderBy:order") {{activity.name}}
 
 
