--- a/public/www/hamls/pages/bid_sign_up.haml
+++ b/public/www/hamls/pages/bid_sign_up.haml
@@ -1,4 +1,4 @@
-%header(id="bid_sign_up_page")
+%header(id="bid_sign_up")
   竞价( {{bid_number}}人)
   .header-right(ng-switch="selection")
     %a.btn.btn-primary(ng-tap="sign_up_to_running()" ng-Switch-when="before_running" )开始
@@ -8,7 +8,7 @@
     %a.btn(ng-tap="back_to_bid_list_page()")返回
   .scrollable
     %ul.list-style-2
-      %li(style="font-family:arial;color:black;line-height:40px" ng-repeat="person_bid_name in person_bid_names") {{person_bid_name.name}}  {{person_bid_name.phone}}
+      %li(style="font-family:arial;color:black;line-height:40px" ng-repeat="person_bid_name in person_bid_names|orderBy:order3") {{person_bid_name.name}}  {{person_bid_name.phone}}
 %footer.footer
   %ul.footer-nav.footer-nav-2tabs
     %li
