--- a/public/www/hamls/pages/client_login.haml
+++ b/public/www/hamls/pages/client_login.haml
@@ -7,7 +7,7 @@
         %input.input-full(  type="text"ng-model="account" placeholder="请输入帐号")
         %br
         %br
-        %input.input-full(type="text"ng-model="key"  placeholder="请输入密码")
+        %input.input-full(type="password"ng-model="key"  placeholder="请输入密码")
         %br
         %br
         %a.btn.btn-style.btn-block(type="submit" ng-tap="login()")登录
