--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -9,6 +9,14 @@
   float: right;
   padding-right:140px
 }
+.right-padding1{
+  float: right;
+  padding-right:50px
+}
+.left-padding1{
+  float: left;
+  padding-left:50px
+}
 .yuanjiao{
   border-top-left-radius:10px;
   border-top-right-radius:10px;
