网页端展示基本实现

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,6 +1,7 @@
 !!!5
 %html
   %head
+    -#%meta(http-equiv="refresh" content="2" URL="/sessions/activity_show")
     %title ActivityServer
     =stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
