--- a/app/views/user/manage_index.haml
+++ b/app/views/user/manage_index.haml
@@ -15,9 +15,9 @@
 %table(class="table table-hover table-bordered" style="margin:auto; width:79%")
   %thead
     %tr
-      %td 编号
-      %td 用户名
-      %td 操作
+      %th 编号
+      %th 用户名
+      %th 操作
   %tbody
     -counter=@counter
     -for t in @users
