将页面分为别放在4个文件夹内，使之结构化

--- a/app/views/admins/add_account.haml
+++ b/app/views/admins/add_account.haml
@@ -5,7 +5,7 @@
     =link_to  "退出",:action => 'logout',:controller => 'sessions'
 %h2 活动通
 %div(style="background:#F5F5F5;padding:8px")
-  =link_to '首页',:action => 'manage_index_or_login'
+  =link_to '首页',:action => 'manage_index'
   %lable /添加用户
 %div(style="background:#F5F5F5;position: relative;" class="modal1")
   %br
