--- a/app/views/shows/sign_up_list.haml
+++ b/app/views/shows/sign_up_list.haml
@@ -6,7 +6,7 @@
       =@user1
       =flash.now[:notice]
       =@user.name
-    =link_to  "退出",:action => 'logout'
+    =link_to  "退出",'/sessions/logout'
 %h2 活动通
 %div(style="background:#F5F5F5;padding:8px")
   =link_to '首页' ,:action => 'show'
