--- a/app/views/shows/show.haml
+++ b/app/views/shows/show.haml
@@ -11,7 +11,7 @@
   %h4
     活动信息
     .right
-      =link_to_if(@status_=='running','活动展示','/shows/activity_show')
+      =link_to_if(@status=='running','活动展示','/shows/activity_show')
 %table(class="table table-hover table-bordered" style="margin:auto; width:79%")
   %thead
     %tr
