--- a/app/views/shows/show.haml
+++ b/app/views/shows/show.haml
@@ -1,13 +1,5 @@
-.nav-header1
-  .right
-    %p1
-      %lable 你好,
-      %lable
-      =@user.name
-    =link_to  "退出",:action => 'logout',:controller => 'sessions'
-%h2 活动通
-%br
-%div(class='yuanjiao container'style="margin:auto;width:79%;background:#c0c0c0")
+= render 'display_header'
+%div(class='title-bar container')
   %h4
     活动信息
     .right
