--- a/app/views/shows/bid_detail.haml
+++ b/app/views/shows/bid_detail.haml
@@ -1,11 +1,4 @@
-.nav-header1
-  .right
-    %p1
-      %lable 你好,
-      %lable
-      =@user.name
-    =link_to  "退出", '/sessions/logout'
-%h2 活动通
+= render 'display_header'
 %div(style="background:#F5F5F5;padding:8px")
   =link_to '首页' ,:action =>'show'
   %lable /
@@ -23,9 +16,9 @@
       ='获胜者:'+@win.name
       ='出价:'+@win.price+'元'
       ='手机号:'+@win.phone
-%div(style='width:74%' class="container" )
+%div(class="container" )
   %ul(class="nav nav-tabs" )
-    %li(style="text-align:center;width:50%" class="active" )
+    %li(class="active form-width" )
       %a(href="#bid_lists"data-toggle="tab" ) 出价列表
     %li(style="text-align:center;width:50%" )
       %a(href="#bid_counts"data-toggle="tab" ) 价格统计
@@ -33,32 +26,32 @@
     %div(class="tab-pane fade in active table-hover table-bordered" id='bid_lists')
       %table(style='width:100%')
         %thead
-          %tr
-            %th(style="text-align:center;width:25%") 编号
-            %th(style="text-align:center;width:25%") 姓名
-            %th(style="text-align:center;width:25%") 价格/元
-            %th(style="text-align:center;width:25%") 手机号
+          %tr(style="text-align:center;width:25%")
+            %th 编号
+            %th 姓名
+            %th 价格/元
+            %th 手机号
         %tbody
           -counter =@counter
           -@bid_details.each do |t|
-            %tr
-              %td(style="text-align:center;width:25%" valign="middle")
+            %tr(style="text-align:center;width:25%" valign="middle")
+              %td
                 = counter
                 -counter=counter+1
-              %td(style="text-align:center;width:25%" valign="middle")
+              %td
                 =t.name
-              %td(style="text-align:center;width:25%" valign="middle")
+              %td
                 =t.price
-              %td(style="text-align:center;width:25%" valign="middle")
+              %td
                 =t.phone
         .right-padding
           = will_paginate @bid_details,{:previous_label =>'上一页',:next_label => '下一页'}
     %div(class="tab-pane  table-hover table-bordered" id='bid_counts')
       %table(style='width:100%')
         %thead
-          %tr
-            %th(style="text-align:center;width:50%") 价格/元
-            %th(style="text-align:center;width:50%") 人数
+          %tr(style="text-align:center;width:50%")
+            %th 价格/元
+            %th 人数
         %tbody
           -@bid_counts.each do |t|
             %tr
