--- a/app/views/admins/manage_index.haml
+++ b/app/views/admins/manage_index.haml
@@ -1,12 +1,4 @@
-.nav-header1
-  .right
-    %p1
-      %span 你好,
-      %span
-        =@user.name
-    =link_to  "退出",:action => 'logout',:controller => 'sessions'
-%h2 活动通
-%br
+= render 'header'
 %div(class='yuanjiao'style="margin:auto;width:79%;background:#c0c0c0;padding:1px")
   %h4
     用户管理
