--- a/public/www/css/android.css
+++ b/public/www/css/android.css
@@ -261,6 +261,7 @@ footer {
 
 .index-login {
 	margin-top: 20px;
+    text-align:center
 }
 
 .index-login .input-append, .index-login .input-prepend {
