消除部分冗余代码

--- a/app/views/shows/bid_list.haml
+++ b/app/views/shows/bid_list.haml
@@ -15,12 +15,11 @@
       %th 名称
       %th 参与人数
   %tbody
-    -counter = @counter
     -@bid_lists.each do |t|
       %tr
         %td(text-align="center" style="width:37%" valign="middle")
-          = counter
-          -counter=counter+1
+          = @counter
+          -@counter=@counter+1
         %td(align="center" style="width:37%" valign="middle")
           =link_to t.name ,bid_detail_url(activity_id:t.activity_id,name:t.name)
         %td(align="center" style="width:37%" valign="middle")
