将部分代码移到helper里面

--- a/app/views/shows/bid_detail.haml
+++ b/app/views/shows/bid_detail.haml
@@ -7,15 +7,7 @@
   =@bid
 %br
 %div(style="background:#c0c0c0;text-align:center;padding:8px")
-  -if @win.nil?
-    %h3 活动正在进行中...
-  -if !@win.nil?&&@win[:name]=='竞价无效'
-    %h3 本次竞价无效
-  -if !@win.nil?&&@win[:name]!='竞价无效'
-    %h4
-      ='获胜者:'+@win.name
-      ='出价:'+@win.price+'元'
-      ='手机号:'+@win.phone
+  = show_activity_situation
 %div(class="container" )
   %ul(class="nav nav-tabs" )
     %li(class="active form-width" )
